# lidar_calib_test_pipeline

./: .gitignore  CMakeLists.txt  comb_test.py  package.xml  sample_extrinsics.yaml
dummy_calibrator/: CMakeLists.txt  package.xml
dummy_calibrator/src/: dummy_calibrator_node.cpp
dummy_dataset/agent_1/scene_1/: fl.pcd
dummy_dataset/agent_2/extrinsics/: lidar_red_ext.yaml
include/: data_handler.hpp  evaluator.hpp  extrinsics_parser.hpp
lidar_calib_test_bridge/: CMakeLists.txt  package.xml
lidar_calib_test_bridge/include/lidar_calib_test_bridge/: interface.hpp
lidar_calib_test_bridge/src/: interface.cpp
lidar_calib_test_comms/: CMakeLists.txt  package.xml
lidar_calib_test_comms/msg/: test_pointcloud.msg
lidar_calib_test_comms/srv/: calib_result.srv
lidar_calib_test_pipeline/: CMakeLists.txt  package.xml
lidar_calib_test_pipeline/dummy_dataset/agent_0/extrinsics/: lidar_blue_ext.yaml  lidar_green_ext.yaml
lidar_calib_test_pipeline/dummy_dataset/agent_2/extrinsics/: lidar_green_ext.yaml  lidar_red_ext.yaml
lidar_calib_test_pipeline/include/: data_handler.hpp  evaluator.hpp  extrinsics_parser.hpp  interface.hpp  io_utils.hpp  types.hpp
lidar_calib_test_pipeline/launch/: data_handler.launch
lidar_calib_test_pipeline/src/: dummy_calibrator.cpp  evaluator.cpp  extrinsics_parser.cpp  io_utils.cpp
lidar_calib_test_pipeline/src/bridge/: interface.cpp  interface_test.cpp
lidar_calib_test_pipeline/src/data_handler_server/: data_handler.cpp  data_handler_server_node.cpp
lidar_calib_test_pipeline/src/evaluator/: evaluator.cpp  evaluator_node.cpp
lidar_calib_test_pipeline/test_runs/: .gitignore  .~lock.TEST_2021_12_08__18_56.csv#  TEST_2021_12_09__11_06_ndt.txt  stat_validation.py  stat_validator.ipynb
multi_lidar_calibrator/: CMakeLists.txt  README.md  package.xml
multi_lidar_calibrator/include/: multi_lidar_calibrator.h
multi_lidar_calibrator/launch/: multi_lidar_calibrator_helper.launch  test.launch
multi_lidar_calibrator/rviz/: multi_lidar_calibrator.rviz
multi_lidar_calibrator/src/: multi_lidar_calibrator.cpp
src/: data_handler.cpp  data_handler_srv.cpp  data_handler_srv_node.cpp  evaluator.cpp  extrinsics_parser.cpp
src/data_handler_server/: data_handler.cpp  data_handler_server_node.cpp
srv/: DataHandlerService.srv
